<resources>
    <string name="app_name">Whist Score Keeper</string>
    <string name="name_hint">Player name</string>
    <string name="player_a">Player A</string>
    <string name="player_b">Player B</string>
    <string name="player_c">Player C</string>
    <string name="player_d">Player D</string>
    <string name="initial_score">0</string>
    <string name="total_score">Total:</string>
    <string name="last_round">Last round:</string>
    <string name="current_guess">Current guess:</string>
    <string name="round">Round</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="round_number">Round number </string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="takings">Takings:</string>
    <string name="start_round">Start Playing</string>
    <string name="submit_takings">Next Round</string>
    <string name="incorrectTotalGuess">Total guesses can not be 13.</string>
    <string name="incorrectTotalTakings">Total takings must be 13.</string>
    <string name="reset">New Game</string>
    <string name="ruling_set">Ruling set:</string>
    <string name="spade">Spade</string>
    <string name="heart">Heart</string>
    <string name="clover">Clover</string>
    <string name="diamond">Diamond</string>



</resources>
